--- a/python/demos/url_kachaka_api.ipynb
+++ b/python/demos/url_kachaka_api.ipynb
@@ -38,18 +38,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import secrets\n",
+    "from typing import Annotated\n",
+    "\n",
     "import kachaka_api\n",
-    "from fastapi import FastAPI, HTTPException\n",
+    "from fastapi import FastAPI, HTTPException, Depends\n",
+    "from fastapi.responses import StreamingResponse\n",
+    "from fastapi.security import HTTPBasic, HTTPBasicCredentials\n",
     "from google._upb._message import RepeatedCompositeContainer\n",
     "from google.protobuf.json_format import MessageToDict\n",
     "\n",
     "app = FastAPI()\n",
+    "security = HTTPBasic()\n",
     "kachaka_client = kachaka_api.aio.KachakaApiClient()\n",
     "\n",
     "\n",
     "@app.on_event(\"startup\")\n",
     "async def init_channel() -> None:\n",
     "    await kachaka_client.update_resolver()\n",
+    "\n",
+    "\n",
+    "def verify_credentials(credentials: Annotated[HTTPBasicCredentials, Depends(security)]):\n",
+    "    correct_username = secrets.compare_digest(credentials.username, \"YOUR_AWESOME_USERNAME\")\n",
+    "    correct_password = secrets.compare_digest(credentials.password, \"YOUR_AWESOME_PASSWORD\")\n",
+    "    if not (correct_username and correct_password):\n",
+    "        raise HTTPException(\n",
+    "            status_code=401,\n",
+    "            detail=\"Incorrect username or password\",\n",
+    "            headers={\"WWW-Authenticate\": \"Basic\"},\n",
+    "        )\n",
+    "    return credentials\n",
     "\n",
     "\n",
     "def to_dict(response):\n",
@@ -72,13 +91,25 @@
     "    return to_dict(response)\n",
     "\n",
     "\n",
+    "@app.get(\"/kachaka/{front_or_back}_camera_image.jpeg\")\n",
+    "async def front_camera_image(front_or_back: str, credentials: Annotated[HTTPBasicCredentials, Depends(verify_credentials)]):\n",
+    "    if front_or_back == \"front\":\n",
+    "        response = await kachaka_client.get_front_camera_ros_compressed_image()\n",
+    "    elif front_or_back == \"back\":\n",
+    "        response = await kachaka_client.get_back_camera_ros_compressed_image()\n",
+    "    else:\n",
+    "        raise HTTPException(status_code=404, detail=\"Camera not found\")\n",
+    "    image_bytes = io.BytesIO(response.data)\n",
+    "    return StreamingResponse(image_bytes, media_type=\"image/jpeg\")\n",
+    "\n",
+    "\n",
     "@app.get(\"/kachaka/{method:path}\")\n",
-    "async def get(method: str):\n",
+    "async def get(method: str, credentials: Annotated[HTTPBasicCredentials, Depends(verify_credentials)]):\n",
     "    return await run_method_or_404(method, {})\n",
     "\n",
     "\n",
     "@app.post(\"/kachaka/{method:path}\")\n",
-    "async def post(method: str, params: dict):\n",
+    "async def post(method: str, params: dict, credentials: Annotated[HTTPBasicCredentials, Depends(verify_credentials)]):\n",
     "    return await run_method_or_404(method, params)"
    ]
   },
